# ImageProcessor

./: CMakeLists-NG.txt  CMakeLists-new.txt  CMakeLists.txt  ImageProcessor.pro  include.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
RIP/include/: JobSettings.h  RIPConvert.h  RgbToLabConverter.h  include.h  lcms2.h
RIP/src/: RIPConvert.cpp  RgbToLabConverter.cpp
UI/include/: settingsdialog.h
UI/src/: JobSettings.cpp  settingsdialog.cpp  settingsdialog.ui
Util/include/: ProcessStruct.h
Util/src/: ProcessStruct.cpp
